--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ repositories {
 }
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.squareup', name: 'javawriter', version: '2.5.1'
 }
 sourceSets {
     main {
