--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
     compile group: 'com.squareup', name: 'javawriter', version: '2.5.1'
+    
+    compile group: 'junit', name: 'junit', version: '4.12'
+    
+    compile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
 
 }
 
@@ -25,5 +29,16 @@ sourceSets {
         }
 
     }
+    
+  /*  
+  test {
+        java {
+            srcDirs = ['./java_testcases/junit']
+        }
+    } 
+    
+   */  
+    
+    
 
 }  
