--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ dependencies {
     
     compile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
 
+    compile group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '6.0.0'
+
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
+     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+
 }
 
 sourceSets {
@@ -30,14 +36,14 @@ sourceSets {
 
     }
     
-  /*  
+ 
   test {
         java {
-            srcDirs = ['./java_testcases/junit']
+            srcDirs = ['./java_testcases/junit/crt_program']
         }
     } 
     
-   */  
+   
     
     
 
