--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,57 @@
-apply plugin: 'java'
+plugins {
+    id 'java' 
+}
 
 repositories {
-
     mavenCentral()
-
 }
 
 dependencies {
-
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
-
-    compile group: 'com.squareup', name: 'javawriter', version: '2.5.1'
-    
-    compile group: 'junit', name: 'junit', version: '4.12'
-    
-    compile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-
-    compile group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '6.0.0'
-
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-
-     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    implementation group: 'com.squareup', name: 'javawriter', version: '2.5.1'
+    implementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+    implementation group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '6.0.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.32'
 }
 
 sourceSets {
-
     main {
-
         java {
-
-            srcDirs = ['./']
-
+            srcDirs = ['.']
         }
-
     }
-    
- 
-  test {
-        java {
-            srcDirs = ['./java_testcases/junit/crt_program']
-        }
-    } 
-    
-   
-    
-    
 
-}  
+    test {
+        java {
+            srcDirs = ['java_testcases/junit']
+            exclude 'crt_program'
+        }
+    }
+
+    crtTest {
+        java {
+            srcDirs = ['java_testcases/junit/crt_program']
+        }
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+}
+
+configurations {
+    crtTestImplementation.extendsFrom implementation
+    crtTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
+task crtTest(type: Test) {
+    description = 'Runs tests on correct programs.'
+    group = 'verification'
+    check.dependsOn(crtTest)
+    testClassesDirs = sourceSets.crtTest.output.classesDirs
+    classpath = sourceSets.crtTest.runtimeClasspath
+}
+
+tasks.withType(Test) {
+    maxHeapSize = "1024m"
+}
